<resources>
    <string name="app_name">WhatsNext</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings_logout">Log Out</string>
    <string name="action_settings_switch_user">Switch User</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Navigation Drawer -->
    <!-- Student Nav Bar -->
    <string name="nav_timetable">Time Table</string>
    <string name="nav_upcoming_events">Upcoming Events</string>
    <string name="nav_lecture_times">Lecture Times</string>
    <string name="nav_schedule_event">Schedule Event</string>
    <!-- Lecturer Nav Bar -->
    <string name="nav_assignments">Assignments</string>
    <string name="nav_tests">Tests</string>
    <string name="nav_email">Send Email</string>

    <!-- Test Values for Spinner -->
    <string-array name="modules">
        <item>WRAP302</item>
        <item>WRAP301</item>
        <item>WRA301</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Incorrect username/password.</string>
    <string name="title_activity_upcoming_adapter">UpcomingActivityAdapter</string>
    <string name="title_activity_past_test_adapter">PastTestAdapter</string>

</resources>
