<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="View">
            <menu>
                <item
                    android:id="@+id/nav_view_timetable"
                    android:icon="@drawable/ic_event_black_24dp"
                    android:title="@string/nav_timetable" />
                <item
                    android:id="@+id/nav_view_upcoming_events"
                    android:icon="@drawable/ic_event_note_black_24dp"
                    android:title="@string/nav_upcoming_events" />
            </menu>
        </item>

    </group>

    <item android:title="Maintain">
        <menu>
            <item
                android:id="@+id/nav_maintain_assignments"
                android:icon="@drawable/ic_content_paste_black_24dp"
                android:title="@string/nav_assignments" />
            <item
                android:id="@+id/nav_maintain_tests"
                android:icon="@drawable/ic_create_black_24dp"
                android:title="@string/nav_tests" />
            <item
                android:id="@+id/nav_maintain_send_email"
                android:icon="@drawable/ic_markunread_black_24dp"
                android:title="@string/nav_email" />
        </menu>
    </item>

</menu>
